--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@types/node": "12.12.14",
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
-    "antd": "^3.25.3",
+    "antd": "^3.26.0",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
     "normalize.css": "^8.0.1",
@@ -15,8 +16,10 @@
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-flv-player": "^1.0.9",
+    "react-router": "^5.1.2",
     "react-scripts": "3.2.0",
     "reflv": "^0.0.1",
+    "socket.io-client": "^2.3.0",
     "typescript": "3.7.2"
   },
   "scripts": {
