--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
+    "flv.js": "^1.5.0",
+    "jwt-decode": "^2.2.0",
     "normalize.css": "^8.0.1",
+    "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.12.0",
-    "react-flv-player": "^1.0.9",
+    "react-infinite-scroller": "^1.2.4",
+    "react-responsive": "^8.0.1",
     "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "reflv": "^0.0.1",
     "socket.io-client": "^2.3.0",
     "typescript": "3.7.2"
   },
@@ -42,5 +47,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jwt-decode": "^2.2.1",
+    "@types/react-infinite-scroller": "^1.2.1",
+    "@types/react-responsive": "^8.0.2",
+    "@types/react-router-dom": "^5.1.3",
+    "shed-css": "^1.4.0"
   }
 }
